objects/amazonconnect__AC_CCPOverlayElement__c.object
<CustomObject>
    <fields>
        <fullName>amazonconnect__ActionFormSchema__c</fullName>
        <defaultValue>(&quot;{}&quot;)</defaultValue>
        <label>Action Form Schema</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>amazonconnect__CTIFlow__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>CTI Flow</label>
        <referenceTo>amazonconnect__AC_CtiScript__c</referenceTo>
        <relationshipLabel>AC CCP Overlay Elements</relationshipLabel>
        <relationshipName>AC_CCP_Overlay_Elements</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Order__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Payload__c</fullName>
        <defaultValue>(&quot;{}&quot;)</defaultValue>
        <label>Payload</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Action</fullName>
                    <default>true</default>
                    <label>Action</label>
                </value>
                <value>
                    <fullName>Tab</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>AC CCP Overlay Element</label>
    <nameField>
        <label>AC CCP Overlay Element Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AC CCP Overlay Elements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>